# fastapi-boilerplate

./: .dockerignore  .gitignore  LICENSE  README.en.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: python-app.yml
app/: .env.template  alembic.ini  create_fastapi_app.py
app/actions/: create_superuser.py
app/admin/: __init__.py  access_token.py  admin_auth.py  converter.py  user.py
app/alembic/: env.py
app/alembic/versions/: .keep  2026_01_22_1421-5ae2cd33ec7e_create_tables_users_and_tokens.py  2026_03_31_1828-7dd5dc316d4e_add_colum_in_user.py
app/api/: __init__.py
app/api/dependencies/: __init__.py  current_user.py  get_db.py
app/api/webhooks/: __init__.py
app/core/: __init__.py  config.py  db_helper.py  limiter.py  templates.py
app/core/auth/: __init__.py  backend.py  strategy.py  tasks.py  transport.py  user_manager.py
app/core/cache/: __init__.py  decorator.py  key_builder.py
app/core/config/: __init__.py  app.py  auth.py  cache.py  db.py  external.py  logging.py  settings.py
app/exceptions/: custom.py  handlers.py
app/middleware/: __init__.py  background_tasks_middleware.py  custom_rate_limit_middleware.py  security_headers_middleware.py
app/models/: __init__.py  access_token.py  base.py  user.py
app/repositories/: __init__.py  crud_manager.py
app/schemas/: __init__.py  base_schema.py  user.py
app/templates/: base.html  index.html  limit-exceeded.html  page-missing.html
app/views/: __init__.py  home.py  limit_exceeded.py  page_missing.py
docker-build/app/: Dockerfile  prestart.sh
tests/: conftest.py
(+33 files in other folders)
